gcc/testsuite/rust/rustc/ui/typeck/issue-83621-placeholder-static-in-extern_dg.rs
// Regression test for #83621.

extern "C" {
    static x: _; // { dg-error ".E0121." "" { target *-*-* } }
}

fn main() {}

